Updates to new design system index page

--- a/app/views/home-office-kit-layout-new.html
+++ b/app/views/home-office-kit-layout-new.html
@@ -76,8 +76,7 @@
         </div>
       </div>
         <h1 class="govuk-heading-xl">Design and build services<br>
-        that work for everyone</hl>
-        <br>
+        that work for everyone</h1>
         <br>
         <p class="govuk-body">Use the UCD Manual to create consistent services that put users first.</p>
         <br>
