--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,8 +32,33 @@ width: 352px;
 background: #732282;
 }
 
+.line-2{
+  height: 3px;
+  width: 130px;
+  background: #732282;
+}
+
+.line-3{
+  height: 3px;
+  width: 120px;
+  background: #732282;
+}
+
+.line-4{
+  height: 3px;
+  width: 125px;
+  background: #732282;
+}
+
+.community{
+  position: absolute;
+  float: right;
+  margin-left: 850px;
+}
+
 .govuk-heading-xl{
   color: #732282;
+  margin-bottom: 0;
 }
 
 .govuk-body{
@@ -76,6 +101,39 @@ background: #732282;
         <a href="#" class="govuk-link">View more</a></p>
     </div>
   </div>
+
+  <br>
+  <br>
+  <br>
+
+  <div class="community">
+<strong><div class="line-4"></div>
+<br>
+  <h3 class="govuk-heading-m">Community</h3>
+  <p>Take a look at what we’re currently working on<br> and our priorities for the future.</p>
+<p><a href="#" class="govuk-link">Hide this page</a></p>
+<p><a href="#" class="govuk-link">Maps</a></p>
+<p><a href="#" class="govuk-link">Task list</a></p>
+<p><a href="#" class="govuk-link">Autocomplete</a></p>
+<p><a href="#" class="govuk-link">Navigation</a></p>
+<p><a href="#" class="govuk-link">Choose a date</a></p>
+</div>
+
+  <strong><div class="line-2"></div>
+<br>
+  <h3 class="govuk-heading-m">Latest news</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean turpis ex, vehicula<br> sed luctus quis, posuere ac libero. Fusce laoreet dolor ac est porta viverra. Class aptent taciti<br> sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+<p><a href="#" class="govuk-link">Link</a></p>
+
+<br>
+<br>
+
+<strong><div class="line-3"></div>
+<br>
+  <h3 class="govuk-heading-m">Contribute</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean turpis ex, vehicula<br> sed luctus quis, posuere ac libero. Fusce laoreet dolor ac est porta viverra. Class aptent taciti<br> sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+<p><a href="#" class="govuk-link">Link</a></p>
+
 
 
 {% endblock %}
