Updates to HO design system

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -12,3 +12,6 @@
 .govuk-width-container {
     max-width: 1160px;
 }
+
+.hods-header__navigation-list__item a:visited {
+  color: #732282 !important;
