--- a/app/views/home-office-kit-layout-design-system-components.html
+++ b/app/views/home-office-kit-layout-design-system-components.html
@@ -67,7 +67,7 @@
         <div class="hods-header__title">
             <nav class="hods-header__navigation">
 						<ul aria-label="Top Level Navigation" class="hods-header__navigation-list">
-							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="design-system">Design system</a></li>
+							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="/">Design system</a></li>
 							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="/">Content style guide</a></li>
 							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="/">Manuals & standards</a></li>
               <input aria-expanded="false" aria-owns="app-site-search__input__listbox" aria-autocomplete="both" aria-describedby="app-site-search__input__assistiveHint" autocomplete="off" class="app-site-search__input app-site-search__input--default" id="app-site-search__input" name="input-autocomplete" placeholder="Search Design System" type="text" role="combobox">
@@ -75,12 +75,17 @@
 					</nav>
         </div>
       </div>
-        <h1 class="govuk-heading-xl">Design and build services<br>
-        that work for everyone</h1>
-        <br>
-        <p class="govuk-body">Use the UCD Manual to create consistent services that put users first.</p>
-        <br>
-    </div>
+      <div class="secondary__navigation">
+        <ul aria-label="secondary navigation" class="hods-header__navigation-list">
+							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="/get-started">Get started</a></li>
+							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="/styles">Styles</a></li>
+							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="/design-system-components">Components</a></li>
+							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="/patterns">Patterns</a></li>
+							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="/content-style-guide">Content style guide</a></li>
+							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="/accessibility">Accessibility</a></li>
+							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="/contribute">Contribute</a></li>
+						</ul>
+        </div>
   </header>
 {% endblock %}
 
@@ -99,6 +104,19 @@
 {% endblock %}
 
 {% block footer %}
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
   <footer class="hods-footer" role="contentinfo">
     <div class="hods-footer__inner">
       <div class="hods-footer__container hods-width-container">
