--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -13,6 +13,98 @@
     max-width: 1160px;
 }
 
-.hods-header__navigation-list__item a:visited {
-  color: #732282 !important;
+.hods-header-border__logo {
+  border-left: 5px solid #732282;
+  padding-left:5px;
+  margin-bottom:10px;
+}
+
+.hods-header-border__logo h2  {
+  margin-bottom:0px
+}
+
+/* Style the search box inside the navigation bar */
+.search input[type=text] {
+  float: right;
+  padding: 6px;
+  border: none;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+  border: 1px solid #000000;  
+  text-indent: 30px;
+  width:200px;
+  font-size: 14px;
+}
+
+.search-icon {
+  position: relative;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 36 36' width='40' height='40'%3E%3Cpath d='M25.7 24.8L21.9 21c.7-1 1.1-2.2 1.1-3.5 0-3.6-2.9-6.5-6.5-6.5S10 13.9 10 17.5s2.9 6.5 6.5 6.5c1.6 0 3-.6 4.1-1.5l3.7 3.7 1.4-1.4zM12 17.5c0-2.5 2-4.5 4.5-4.5s4.5 2 4.5 4.5-2 4.5-4.5 4.5-4.5-2-4.5-4.5z' fill='%23505a5f'%3E%3C/path%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center left -2px;
+  background-size: 40px 40px
+}
+
+@media (min-width: 40.0625em) {
+  .not-govuk-naivigation-menu {
+    font-size: 1rem;
+    line-height: 1.25;
+  }
+}
+
+.not-govuk-navigation-menu {
+  font-family: inherit;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  font-size: 1em;
+  line-height: 1.1428571429;
+  border-color: #1d70b8;
+  border-style: solid;
+  border-width: 0;
+  color: #1d70b8;
+}
+
+.not-govuk-navigation-menu__list {
+  font-family: inherit;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 1.25;
+  color: inherit;
+  margin-top: 0;
+  margin-bottom: 15px;
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.not-govuk-navigation-menu__list {
+  border-color: inherit;
+  border-style: inherit;
+  border-width: 0;
+  color: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+@media (min-width: 40.0625em) {
+.govuk-list, .not-govuk-navigation-menu__list {
+  margin-bottom: 20px;
+}
+}
+@media (min-width: 40.0625em) { 
+.govuk-list, .not-govuk-navigation-menu__list {
+  font-size: 19px;
+  font-size: 1.1875rem;
+  line-height: 1.3157894737;
+}
+}
+
+.not-govuk-navigation-menu__list__link:not(:focus):not(:active) {
+  color: inherit;
+}
+.not-govuk-navigation-menu__list__link:not(:hover) {
+  text-decoration: none;
 }
