--- a/app/views/design-system-components.html
+++ b/app/views/design-system-components.html
@@ -15,7 +15,7 @@
 <div class="govuk-grid-column-one-quarter">
 								<nav class="not-govuk-navigation-menu">
 									<ul class="not-govuk-navigation-menu__list">
-										<li class="not-govuk-navigation-menu__list__item"><a class="not-govuk-navigation-menu__list__link" href="/components?name=Alert">Alert</a></li>
+										<li class="not-govuk-navigation-menu__list__item"><a class="not-govuk-navigation-menu__list__link" href="design-system-components-alert">Alert</a></li>
 										<li class="not-govuk-navigation-menu__list__item"><a class="not-govuk-navigation-menu__list__link" href="/components?name=Date%20display">Date display</a></li>
 										<li class="not-govuk-navigation-menu__list__item"><a class="not-govuk-navigation-menu__list__link" href="/components?name=Date-time">Date-time</a></li>
 										<li class="not-govuk-navigation-menu__list__item"><a class="not-govuk-navigation-menu__list__link" href="/components?name=Expandable%20banner">Expandable banner</a></li>
