--- a/app/views/home-office-kit-layout-design-system.html
+++ b/app/views/home-office-kit-layout-design-system.html
@@ -62,16 +62,18 @@
     <div class="hods-header__container hods-width-container">
       <div class="hods-header__main">
         <div class="hods-header__logo">
-          <strong><h2 class="govuk-heading-s"><a href="/index">Home Office<br>
-          UCD Manual</a></h2><strong>
+          <div class="hods-header-border__logo">
+            <strong><h2 class="govuk-heading-s">Home Office<br>
+            UCD Manual</h2><strong>
+          </div>
         </div>
         <div class="hods-header__title">
-            <nav class="hods-header__navigation">
+            <nav class="hods-header__navigation search">
 						<ul aria-label="Top Level Navigation" class="hods-header__navigation-list">
 							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="">Design system</a></li>
 							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="">Content style guide</a></li>
 							<li class="hods-header__navigation-list__item"><a class="hods-header__navigation-list__link" href="">Manuals & standards</a></li>
-              <input aria-expanded="false" aria-owns="app-site-search__input__listbox" aria-autocomplete="both" aria-describedby="app-site-search__input__assistiveHint" autocomplete="off" class="app-site-search__input app-site-search__input--default" id="app-site-search__input" name="input-autocomplete" placeholder="Search Design System" type="text" role="combobox">
+              <input class="search-icon" type="text" placeholder="Search Design System"> 
 						</ul>
 					</nav>
         </div>
