--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -30,6 +30,7 @@
   border: none;
   margin-top: 8px;
   margin-right: 16px;
+  margin-left: 20px;
   font-size: 17px;
   border: 1px solid #000000;  
   text-indent: 30px;
