--- a/app/views/design-system.html
+++ b/app/views/design-system.html
@@ -2,27 +2,9 @@
 
 {% block homeOfficeKit_style %}
 
-.hods-header__navigation-list__link{
-  font-family: roboto;
-  color: ;
-}
-
-.hods-header__navigation-list__link-secondary{
-  font-family: roboto;
-  color: #732282 !important;
-}
-
-
-.govuk-heading-s{
-  font-family: roboto;
-}
-
-.govuk-heading-xl{
-  font-family: roboto;
-}
-
-.govuk-body{
-  font-family: roboto;
+.not-govuk-navigation-menu__list__item{
+  list-style: none;
+  margin-bottom: 16px;
 }
 
 
