--- a/app/views/index.html
+++ b/app/views/index.html
@@ -107,7 +107,7 @@ background: #732282;
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="ho-design.scss" /> 
+    <!--<link rel="stylesheet" type="text/css" href="ho-design.scss" /> -->
     <title>Link CSS to HTML</title>
 </head>
   <title>flex-box</title>
