--- a/app/views/home-office-kit-layout-new.html
+++ b/app/views/home-office-kit-layout-new.html
@@ -52,6 +52,13 @@
   {% endblock %}
   <style type="text/css">
     {% block homeOfficeKit_style %}
+    @media(min-width: 40.0625em) {
+    .hods-header__logo {
+        width:130px;
+        margin-right: 20%;
+        margin-bottom: 0
+    }
+}
     {% endblock %}
   </style>
 {% endblock %}
